--- a/website/pages/docs/components/inputField.mdx
+++ b/website/pages/docs/components/inputField.mdx
@@ -4,14 +4,14 @@ section: Components
 slug: /docs/components/inputField/
 ---
 
-import { Box, Flex, InputField, CamaraTheme } from 'camara';
+import { Box, Flex, InputField, BrowserWindow } from 'camara';
 import { LiveConfig } from 'smooth-doc/components';
 
 <!-- Define `camara` module as `{ InputField }` -->
 
 <LiveConfig
   modules={{
-    camara: { Box, Flex, InputField, CamaraTheme },
+    camara: { Box, Flex, InputField, BrowserWindow },
   }}
 />
 
@@ -42,52 +42,52 @@ InputField properties
 ### Basic Input
 
 ```jsx live noInline
-import { InputField, CamaraTheme } from 'camara';
+import { InputField, BrowserWindow } from 'camara';
 
 render(
-  <CamaraTheme>
+  <BrowserWindow>
     <InputField placeholder="Type something here" />
-  </CamaraTheme>
+  </BrowserWindow>
 );
 ```
 
 ### Block
 
 ```jsx live noInline
-import { Box, InputField, CamaraTheme } from 'camara';
+import { Box, InputField, BrowserWindow } from 'camara';
 
 render(
-  <CamaraTheme>
+  <BrowserWindow>
     <Box>
       <InputField label="First Name" />
       <InputField label="Last Name" />
     </Box>
-  </CamaraTheme>
+  </BrowserWindow>
 );
 ```
 
 ### Inline
 
 ```jsx live noInline
-import { Flex, InputField, CamaraTheme } from 'camara';
+import { Flex, InputField, BrowserWindow } from 'camara';
 
 render(
-  <CamaraTheme>
+  <BrowserWindow>
     <Flex>
       <InputField inline label="First Name" />
       <InputField inline label="Last Name" />
     </Flex>
-  </CamaraTheme>
+  </BrowserWindow>
 );
 ```
 
 ### Helper Text
 
 ```jsx live noInline
-import { Flex, InputField, CamaraTheme } from 'camara';
+import { Flex, InputField, BrowserWindow } from 'camara';
 
 render(
-  <CamaraTheme>
+  <BrowserWindow>
     <Flex>
       <InputField
         label="Email Address"
@@ -100,51 +100,51 @@ render(
         helperText="must contain special characters"
       />
     </Flex>
-  </CamaraTheme>
+  </BrowserWindow>
 );
 ```
 
 ### Required
 
 ```jsx live noInline
-import { Flex, InputField, CamaraTheme } from 'camara';
+import { Flex, InputField, BrowserWindow } from 'camara';
 
 render(
-  <CamaraTheme>
+  <BrowserWindow>
     <Flex>
       <InputField required label="First Name" />
       <InputField required label="Last Name" />
     </Flex>
-  </CamaraTheme>
+  </BrowserWindow>
 );
 ```
 
 ### Hidden Label
 
 ```jsx live noInline
-import { Flex, InputField, CamaraTheme } from 'camara';
+import { Flex, InputField, BrowserWindow } from 'camara';
 
 render(
-  <CamaraTheme>
+  <BrowserWindow>
     <Flex>
       <InputField required placeholder="First Name" />
       <InputField required placeholder="Last Name" />
     </Flex>
-  </CamaraTheme>
+  </BrowserWindow>
 );
 ```
 
 ### Disabled
 
 ```jsx live noInline
-import { Flex, InputField, CamaraTheme } from 'camara';
+import { Flex, InputField, BrowserWindow } from 'camara';
 
 render(
-  <CamaraTheme>
+  <BrowserWindow>
     <Flex>
       <InputField disabled required placeholder="First Name" />
       <InputField disabled required placeholder="Last Name" />
     </Flex>
-  </CamaraTheme>
+  </BrowserWindow>
 );
 ```
